--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,10 @@ jobs:
       - run: npm i
       - run: npm run build
       - run: npm run test
-      - run: npm run benchmark
+      - run: |
+          cat /proc/cpuinfo
+          cat /proc/meminfo
+          npm run benchmark
       - run: |
           if git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$";
           then
