--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "colorid.js",
-  "version": "0.0.0-dev.10",
+  "version": "0.0.1",
   "description": "The ColorID in JavaScript",
   "repository": "git@github.com:rustq/colorid-js.git",
   "license": "MIT",
